💄(style): fix button center on mobile

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -41,8 +41,8 @@ section {
     }
 
     button {
-      margin-top: 22px;
-      padding: 10px 40px;
+      margin-top: 45px;
+      padding: 15px 40px;
       font-size: 1.5rem;
       font-family: "Merriweather", serif;
       background: #452717;
@@ -113,6 +113,8 @@ section {
       button {
         padding: 15px 30px;
         font-size: 1.2rem;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
 
